--- a/admin_side/templates/admin_food_drink.html
+++ b/admin_side/templates/admin_food_drink.html
@@ -1,5 +1,7 @@
 {% extends "admin_base.html" %} {% load static %} {% block content %}
 <!-- Main Content -->
+<link rel="stylesheet" href="{% static 'admin/admin_food_drink.css' %}" />
+
 <div class="content">
   <div class="d-flex justify-content-between align-items-center mb-3">
     <h3 class="fw-bold">Food & Drinks</h3>
@@ -397,6 +399,13 @@
               />
             </div>
             <!-- Add more fields as needed -->
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Close
+            </button>
             <button type="submit" class="btn btn-primary">Save</button>
           </form>
         </div>
