--- a/user_side/templates/home.html
+++ b/user_side/templates/home.html
@@ -21,15 +21,17 @@
   <body>
     <header class="navbar">
       <div class="navbar-logo">
-        <img src="{% static '/assets/logo.png' %}" alt="logo" />
-        <span>LLC TOURISM</span>
+        <a href="#" class="scroll-to-top">
+          <img src="{% static '/assets/logo.png' %}" alt="logo" />
+          <span>LLC TOURISM</span>
+        </a>
       </div>
       <nav class="navbar-links">
         <a href="#destinations">DESTINATIONS</a>
         <a href="#activities">ACTIVITIES</a>
         <a href="#accommodations">ACCOMODATIONS</a>
-        <a href="#food">FOOD & DRINKS</a>
-        <a href="#chat">LET'S CHAT!</a>
+        <a href="#food">FOOD &amp; DRINKS</a>
+        <a href="#chat"><span class="chat-text">LET'S CHAT!</span></a>
       </nav>
     </header>
 
