--- a/user_side/templates/home.html
+++ b/user_side/templates/home.html
@@ -29,7 +29,7 @@
       <nav class="navbar-links">
         <a href="#destinations">DESTINATIONS</a>
         <a href="#activities">ACTIVITIES</a>
-        <a href="#accommodations">ACCOMODATIONS</a>
+        <a href="#accommodations">ACCOMMODATIONS</a>
         <a href="#food">FOOD &amp; DRINKS</a>
         <a href="#chat"><span class="chat-text">LET'S CHAT!</span></a>
       </nav>
@@ -44,6 +44,7 @@
             alt="Lapu-Lapu City"
           />
           <img
+            class="logo-image"
             src="{% static '/assets/lovetheph-logo.png' %}"
             alt="Lapu-Lapu City"
           />
