--- a/css/user/home.css
+++ b/css/user/home.css
@@ -25,11 +25,11 @@
     font-family: 'BARABARA-FINAL';
     color:#fff;
     font-size: 5rem;
-    margin-top: 2rem;
 }
   
   /* Navbar Styling */
 .navbar {
+  height: 70px;
   position: fixed; /* Ensures the navbar stays fixed at the top */
   top: 0;          /* Aligns it to the top of the screen */
   left: 0;         /* Aligns it to the left of the screen */
@@ -46,12 +46,14 @@
 .navbar-logo {
   display: flex;
   align-items: center;
+  padding-right: 15px;
 }
 
 .navbar-logo img {
   width: 80px;
   height: 80px;
   margin-left: 10px;
+  margin-top: 5px;
 }
 
 .navbar-logo span {
@@ -78,7 +80,7 @@
 .navbar-links a {
   color: #1D519E;
   text-decoration: none;
-  padding: 30px; 
+  padding: 20px 30px; 
   font-size: 20px;
   height: 100%;
   transition: background-color 0.3s;
@@ -93,7 +95,7 @@
   color: #FFFFFF; 
   background-color: #FDBF27; 
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); 
-  padding: 30px; 
+  padding: 21px 30px; 
   transition: transform 0.2s ease; 
 }
 
@@ -110,13 +112,12 @@
   transform: scale(1.1); /* Scale only the text */
 }
 
-
   /* Hero Section */
   .hero {
     text-align: center;
     background: linear-gradient(to bottom, #2A1686 0%, #3D1370 34%, #640E44 100%);
     background-size: cover;
-    padding: 80px 0px;
+    padding: 70px 0px;
   }
   .hero .image-section img {
     display: block;         /* Removes space below the image */
@@ -131,6 +132,11 @@
     max-width: 100%; /* Ensures it doesn't exceed a certain width */
     height: auto; /* Maintains the aspect ratio */
   }
+
+  .hero .image-section .logo-image {
+    padding-top: 30px;
+  }
+  
   
   
   .hero h1 {
