--- a/user_side/templates/home.html
+++ b/user_side/templates/home.html
@@ -52,12 +52,14 @@
           <div class="search-container">
             <section class="search-section">
               <div class="search-bar">
-                <select id="category">
-                  <option value="attractions">Attractions</option>
-                  <option value="food">Food</option>
-                  <option value="activities">Activities</option>
-                </select>
+                <i class="icon fa fa-search"></i>
                 <input type="text" placeholder="What are you looking for?" />
+                <select id="category">
+                  <option value="destinations">Destinations</option>
+                  <option value="attractions">Activities</option>
+                  <option value="attractions">Hotels</option>
+                  <option value="food">Restaurants</option>
+                </select>
                 <button>Search</button>
               </div>
             </section>
