--- a/user_side/templates/base.html
+++ b/user_side/templates/base.html
@@ -34,7 +34,7 @@
           <a href="{% url 'destination' %}">Destinations</a>
           <a href="{% url 'activity' %}">Activities</a>
           <a href="{% url 'accommodation' %}">Accommodations</a>
-          <a href="{% url 'food' %}">Food & Drinks</a>
+          <a href="{% url 'food_drinks' %}">Food & Drinks</a>
           <a href="#chat">Let’s Chat!</a>
         </nav>
       </header>
