--- a/css/admin/admin_base.css
+++ b/css/admin/admin_base.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #f8f9fa;
+  background-color: #1D519E;
 }
 .sidebar {
   width: 250px;
@@ -62,6 +62,15 @@ a {
   position: relative;
 }
 
+.dash-content {
+  margin-left: 250px;
+  padding: 20px;
+  margin-top: 25px;
+  background-color: #F5F5F5;
+  color: white;
+  position: relative;
+}
+
 .bg-color {
   position: absolute; /* Position the bg-color absolutely within the content */
   top: 0;
@@ -74,6 +83,25 @@ a {
 .d-flex {
   position: relative; /* Ensure the d-flex div is positioned relative to the content */
   z-index: 1; /* Set a higher z-index to bring it in front of the bg-color */
+}
+
+.d-flex .section.flex-grow-1 {
+  width: 250px; 
+}
+
+.top-header {
+  margin-top: 40px;
+}
+
+/* Position the band image in front of the bg-color */
+.band {
+  position: absolute; /* Position absolute to overlap the bg-color */
+  top: 0; /* Align to the top of the content */
+  left: 0; /* Align to the left of the content */
+  width: 100vw; /* Set the width to 100% of the viewport width */
+  height: auto; /* Maintain the aspect ratio */
+  z-index: 1; /* Bring it in front of the bg-color */
+  display: block;
 }
 
 /* Style the Administrator button */
@@ -144,7 +172,8 @@ h5.text-center {
   display: flex;
   justify-content: space-around;
   gap: 20px;
-  margin-bottom: 20px;
+  margin-left:300px;
+  margin-right: 50px;
 }
 .card {
   background: white;
@@ -163,6 +192,20 @@ h5.text-center {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   margin-bottom: 20px;
 }
+
+#pieChart {
+  width: 450px !important;
+  height: 450px !important;
+}
+
+.pie-section {
+  flex: 2.5; /* Takes up 2 parts of the available space */
+}
+
+.info-section {
+  flex: 2.5; /* Takes up 3 parts of the available space */
+}
+
 .legend {
   display: flex;
   justify-content: space-around;
@@ -207,3 +250,23 @@ h5.text-center {
   height: 100%;
   object-fit: cover;
 }
+
+.weather-card {
+  background-color: #f8f9fa; /* Light gray background for contrast */
+  padding: 15px;
+  border-radius: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
+  margin-top: 15px;
+  text-align: center;
+}
+
+.weather-card h6 {
+  margin-bottom: 10px;
+  color: #333; /* Darker text for readability */
+}
+
+.weather-card .weatherwidget-io {
+  display: block;
+  margin: 0 auto;
+}
+
