--- a/admin_side/templates/admin_activities.html
+++ b/admin_side/templates/admin_activities.html
@@ -1,6 +1,6 @@
 {% extends "admin_base.html" %} {% load static %} {% block content %}
 <!-- Main Content -->
-<div class="content">
+<div class="activities-content">
   <!-- Search and Add -->
   <div class="d-flex justify-content-between align-items-center mb-4">
     <div class="input-group" style="width: 70%">
