--- a/admin_side/templates/admin_food_drink.html
+++ b/admin_side/templates/admin_food_drink.html
@@ -2,7 +2,7 @@
 <!-- Main Content -->
 <link rel="stylesheet" href="{% static 'admin/admin_food_drink.css' %}" />
 
-<div class="content">
+<div class="food-content">
   <!-- Search and Add -->
   <div class="d-flex justify-content-between align-items-center mb-4">
     <div class="input-group" style="width: 70%">
