--- a/css/admin/admin_base.css
+++ b/css/admin/admin_base.css
@@ -1,5 +1,8 @@
 body {
-  background-color: #1D519E;
+  background-color: #f5f5f5; /* Replace with your desired color */
+  min-height: 100vh; /* Ensure the body takes up at least the full height of the viewport */
+  display: flex;
+  flex-direction: column;
 }
 .sidebar {
   width: 250px;
@@ -62,21 +65,28 @@ a {
   position: relative;
 }
 
-.dash-content {
+.dash-content, .destination-content, .articles-content, 
+.activities-content, .food-content, .accommodation-content {
   margin-left: 250px;
   padding: 20px;
   margin-top: 25px;
   background-color: #F5F5F5;
   color: white;
   position: relative;
+  min-height: 100vh;
 }
+
+.modal-title {
+  color: #303030; /* Change this to any color you prefer */
+}
+
 
 .bg-color {
   position: absolute; /* Position the bg-color absolutely within the content */
   top: 0;
   left: 0;
   width: 100%; /* Full width */
-  height: 33.33vh; /* 1/3 of the viewport height */
+  height: 43.33vh; /* 1/3 of the viewport height */
   background-color: #1D519E; /* Background color */
 }
 
