--- a/admin_side/templates/admin_destination.html
+++ b/admin_side/templates/admin_destination.html
@@ -78,13 +78,8 @@
             aria-label="Close"
           ></button>
         </div>
-        <div class="modal-body" style="background-color: white">
-          <form
-            method="POST"
-            enctype="multipart/form-data"
-            id="destinationForm"
-          >
-            {% csrf_token %}
+        <form method="POST" enctype="multipart/form-data" id="destinationForm" action="{% url 'add_destination_entry' %}">
+          {% csrf_token %}
             <div class="row mb-3">
               <div class="col-md-6">
                 <label
