--- a/admin_side/templates/admin_destination.html
+++ b/admin_side/templates/admin_destination.html
@@ -73,7 +73,26 @@
 
   </div>
 </div>
-
+<style>
+  <style>
+    .modal-lg {
+      max-width: 800px;
+    }
+    .form-check-inline {
+        margin-right: 1.5rem;
+        margin-bottom: 0.5rem;
+    }
+    
+    .modal-body {
+        max-height: calc(100vh - 210px);
+        overflow-y: auto;
+    }
+    
+    .form-text {
+        font-size: 0.875em;
+        color: #6c757d;
+    }
+</style>
 {% comment %} <!-- Modal for Adding a Destination --> {% endcomment %}
 <div
   class="modal fade"
