--- a/user_side/templates/home2.html
+++ b/user_side/templates/home2.html
@@ -360,7 +360,8 @@
         </div>
     </div>
 </div> 
+</main>
 <script src="{% static '/chatbot.js'  %}"></script>
 {% endblock %}
-{% block page%}
+{% block page-content%}
 {% endblock %}
