--- a/user_side/templates/base.html
+++ b/user_side/templates/base.html
@@ -20,10 +20,10 @@
           <span>Lapu-Lapu City Tourism</span>
         </div>
         <nav class="navbar-links">
-          <a href="{% url 'destination_list' %}">Destinations</a>
-          <a href="{% url 'activities_view' %}">Activities</a>
-          <a href="{% url 'accommodation' %}">Accommodations</a>
-          <a href="{% url 'food' %}">Food & Drinks</a>
+          <a href="{% url 'user_side_destination_list' %}">Destinations</a>
+          <a href="">Activities</a>
+          <a href="">Accommodations</a>
+          <a href="">Food & Drinks</a>
           <a href="#chat">Let's Chat!</a>
         </nav>
       </header>
