--- a/admin_side/templates/admin_destination.html
+++ b/admin_side/templates/admin_destination.html
@@ -119,6 +119,14 @@
             <input type="text" name="location" id="location" class="form-control" required />
           </div>
           <div class="mb-3">
+            <label for="latitude" class="form-label">Latitude</label>
+            <input type="number" name="latitude" id="latitude" class="form-control" step="0.000001" min="-90" max="90" required>
+          </div>
+          <div class="mb-3">
+            <label for="longitude" class="form-label">Longitude</label>
+            <input type="number" name="longitude" id="longitude" class="form-control" step="0.000001" min="-180" max="180" required>
+          </div>
+          <div class="mb-3">
             <label for="description" class="form-label">Description</label>
             <textarea
               name="description"
@@ -177,6 +185,14 @@
                     <div class="mb-3">
                         <label for="updateLocation" class="form-label">Location</label>
                         <input type="text" class="form-control" id="updateLocation" name="location" required>
+                    </div>
+                    <div class="mb-3">
+                      <label for="latitude" class="form-label">Latitude</label>
+                      <input type="number" name="latitude" id="latitude" class="form-control" step="0.000001" min="-90" max="90" required>
+                    </div>
+                    <div class="mb-3">
+                      <label for="longitude" class="form-label">Longitude</label>
+                      <input type="number" name="longitude" id="longitude" class="form-control" step="0.000001" min="-180" max="180" required>
                     </div>
                     <div class="mb-3">
                         <label for="updateDescription" class="form-label">Description</label>
