Working na ang admin_food_drinks

--- a/admin_side/templates/admin_activity.html
+++ b/admin_side/templates/admin_activity.html
@@ -95,6 +95,10 @@
                       <input type="text" class="form-control" id="name" name="name" required>
                   </div>
                   <div class="mb-3">
+                    <label for="address" class="form-label">Address</label>
+                    <input type="text" class="form-control" id="address" name="address" required>
+                </div>
+                  <div class="mb-3">
                       <label for="description" class="form-label">Description</label>
                       <textarea class="form-control" id="description" name="description" required></textarea>
                   </div>
@@ -102,15 +106,11 @@
                       <label for="category" class="form-label">Category</label>
                       <select class="form-control" id="category" name="category" required>
                           <option value="">Select Category</option>
-                          <option value="adventure">Adventure</option>
-                          <option value="relaxation">Relaxation</option>
-                          <option value="cultural">Cultural</option>
-                          <option value="educational">Educational</option>
+                          <option value="Adventure">Adventure</option>
+                          <option value="Relaxation">Relaxation</option>
+                          <option value="Cultural">Cultural</option>
+                          <option value="Educational">Educational</option>
                       </select>
-                  </div>
-                  <div class="mb-3">
-                      <label for="price" class="form-label">Price</label>
-                      <input type="number" class="form-control" id="price" name="price" step="0.01">
                   </div>
                   <div class="mb-3">
                       <label for="image" class="form-label">Image</label>
@@ -160,6 +160,10 @@
                     <div class="mb-3">
                         <label for="updateName" class="form-label">Name</label>
                         <input type="text" class="form-control" id="updateName" name="name" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="updateAddress" class="form-label">Address</label>
+                        <input type="text" class="form-control" id="updateAddress" name="name" required>
                     </div>
                     <div class="mb-3">
                         <label for="updateDescription" class="form-label">Description</label>
