--- a/user_side/templates/base.html
+++ b/user_side/templates/base.html
@@ -21,7 +21,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     />
-    <link href="{% static '/user/home2.css'  %}" rel="stylesheet" />
+    <link href="{% static 'user/home2.css'  %}" rel="stylesheet" />
     <link href="{% static 'user/chatbox.css'  %}" rel="stylesheet" />
   </head>
   <body>
@@ -29,7 +29,7 @@
       <header class="navbar">
         <div class="navbar-logo">
           <img src="{% static '/assets/logo.png' %}" alt="logo" />
-          <span>LAPU-LAPU CITY TOURISM</span>
+          <span>LLC TOURISM</span>
         </div>
         <nav class="navbar-links">
           <a href="{% url 'user_side_destination_list' %}">DESTINATIONS</a>
